install/package/objects/Copy_Paste_Tool__c.object
<CustomObject>
    <fields>
        <fullName>ButtonOnErrorAction__c</fullName>
        <label>Action (error)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ButtonOnErrorLabel__c</fullName>
        <label>Label (error)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ButtonOnErrorRedirect__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Immediate Redirect (error)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ButtonOnSuccessAction__c</fullName>
        <defaultValue>&quot;window.open(&apos;/apex/SOQLExplorer&apos;) /*window.open(&apos;/apex/SOQLExplorer&apos;)=open in new tab. window.location.href = &apos;/apex/SOQLExplorer&apos; = open in the same tab*/&quot;</defaultValue>
        <inlineHelpText>window.open(&apos;/apex/SOQLExplorer&apos;)
Do not use &quot;.</inlineHelpText>
        <label>Action</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ButtonOnSuccessLabel__c</fullName>
        <label>Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ButtonOnSuccessRedirect__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Immediate Redirect</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DML_Operation__c</fullName>
        <label>DML_Operation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Upsert</fullName>
                </value>
                <value>
                    <fullName>Update</fullName>
                </value>
                <value>
                    <fullName>Delete</fullName>
                </value>
                <value>
                    <fullName>Insert</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Data_Header__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Just copy header columns from your excel here
Example: &quot;Sap Account Number	Call Frequency&quot;</inlineHelpText>
        <label>Data Header</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Insert_Null_Values__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Not checked means that blank values from Excel will not be updated in Salesforce
Checked value means blank values will be updated in Salesforce</inlineHelpText>
        <label>Insert Null Values</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>List_Of_Fields__c</fullName>
        <inlineHelpText>Comma separated list of Salesforce fields. Use API names.
Use the character - to exclude fields from updating (formulas, read-only fields).

Example value: Id,Name-,Call_Frequency__c</inlineHelpText>
        <label>List Of Fields</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Max_Records__c</fullName>
        <defaultValue>100000</defaultValue>
        <inlineHelpText>The limit of records to be processed</inlineHelpText>
        <label>Max Records</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sync_Field__c</fullName>
        <inlineHelpText>API field name for upsert. Field must be External unique id. For updates paste Id. 
Example: Id</inlineHelpText>
        <label>Sync Field</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Where_Clause__c</fullName>
        <inlineHelpText>Optional. 
Example value: RecordType.Name=&apos;Account Type IT&apos;
Important while copying data to Excel.
Ignored while uploading data to Salesforce.</inlineHelpText>
        <label>Where Clause</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sObjectName__c</fullName>
        <inlineHelpText>API object name. Example: Account</inlineHelpText>
        <label>sObjectName</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Copy Paste Tool</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Copy Paste Tools</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Update</fullName>
        <active>true</active>
        <errorConditionFormula>TEXT(DML_Operation__c)=&quot;Update&quot;
&amp;&amp;
Sync_Field__c&lt;&gt;&quot;Id&quot;</errorConditionFormula>
        <errorDisplayField>Sync_Field__c</errorDisplayField>
        <errorMessage>Only Id is acceptable for updates</errorMessage>
    </validationRules>
</CustomObject>